Better display, and fix a typo in the packagist file.

--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
 	"description": "A module for WebDB, for producing Graphviz-rendered Entity Relationship Diagrams",
 	"homepage":    "https://github.com/samwilson/kohana_webdb_erd",
 	"license":     "Simplified BSD",
-	"keywords":    ["kohana", "webdb", "mysql", "erd"],
+	"keywords":    ["kohana", "webdb", "mysql", "erd", "graphviz", "diagrams"],
 	"authors": [
 		{
 			"name":     "Sam Wilson",
@@ -22,5 +22,5 @@
 		"composer/installers":    "~1.0",
 		"kohana/core":            ">=3.3",
 		"samwilson/kohana_webdb": "*"
-	},
+	}
 }
